...
        android:text="@string/decibels"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        android:typeface="monospace"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/audioRecordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noiseTextView"
...
