...
            android:layout_below="@id/noiseInfoLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="30dp">

            <ImageButton
                android:id="@+id/noiseMeasureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/button_to_record_noise_intensity_of_a_room"
                android:padding="10dp"
                android:src="@drawable/ic_microphone_solid"
...
