<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:contentDescription="@string/home_nav_title"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home_nav_title" />
    <item
        android:id="@+id/reviewable"
        android:contentDescription="@string/reviewable_nav_title"
        android:enabled="true"
        android:icon="@drawable/ic_rate_review_white_24dp"
        android:title="@string/reviewable_nav_title" />
    <item
        android:id="@+id/event"
        android:contentDescription="@string/event_page_title"
        android:enabled="true"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/events_nav_item" />
    <item
        android:id="@+id/map"
        android:contentDescription="@string/map_nav_title"
        android:enabled="true"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/map_nav_title" />

</menu>