<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.sdp.ratemyepfl.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="0dp"
            android:layout_weight="1"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph_main" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activityMainBottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigationBar"
            app:itemBackground="@drawable/bottom_navigation_line_selector"
            app:itemIconSize="@dimen/bottomNavigationItemIconSize"
            app:itemIconTint="@drawable/bottom_navigation_color"
...
