...
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pt_sans_bold"
        android:shadowColor="@android:color/background_dark"
...
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureDrawer" />

    <TextView
        android:id="@+id/emailDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pt_sans"
        android:shadowColor="@android:color/background_dark"
...
